[package]
name = "henrylang"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
byteorder = "1.5.0"
downcast-rs = "1.2.1"
enum-iterator = "2.0.0"
lazy_static = "1.4.0"
stdio = "0.1.0"

[features]
default = []
debug = []
