[package]
name = "henrylang"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
enum-iterator = "2.0.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
stdio = "0.1.0"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
debug = []
